source/assets/styles/index.css
@import '_base.css';

@import 'main.css';

/* VARIABLES */
:root {
  --profile-img-size: 3rem;
}

/* CHATBOX */
main .chat-messages {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: calc(100% - var(--footer-height) - 0.5rem);
  color: var(--text-primary-light);
  border-radius: var(--border-radius-md);
  padding: var(--p-md);
  padding: 1rem;
  overflow-y: auto;
  padding-top: 1rem;
}

.app.container {
  padding: var(--p-sm);
}

/* CHATBOX - INCOMING MESSAGES */

.chat-message {
  display: flex;
  justify-content: flex-end;
  margin-bottom: 1rem;
}

.incoming-message {
  padding-left: 0.75rem;
  justify-content: flex-start;
  transform-origin: 100% 50%;
}

.incoming-message .message-bubble {
  background: linear-gradient(
    180deg,
    rgba(255, 255, 255, 0.7) 0%,
    rgba(255, 255, 255, 1) 100%
  );
  color: var(--text-primary-dark);

  transform-origin: 100% 50%;
  visibility: hidden;
  transform-origin: 100% 50%;
  animation: showChatBubbleIncoming 0.1s linear 0.15s forwards;
}

.incoming-message img {
  width: 2rem;
  height: 2rem;
  border-radius: 50%;
  margin-right: 0.5rem;
  border: 1px solid var(--text-secondary);
  background: linear-gradient(
    180deg,
    rgba(255, 255, 255, 0.7) 0%,
    rgba(255, 255, 255, 1) 100%
  );

  outline: 3px solid transparent;
  outline-offset: 2px;
}

.chat-message:first-child {
  padding-top: 0.5rem;
}

@keyframes showChatBubbleIncoming {
  from {
    visibility: hidden;
    transform: translate(-100%, 40px) scale(0);
  }
  to {
    visibility: visible;
    transform: translate(0, 0) scale(1);
  }
}

/* CHATBOX - OUTGOING MESSAGES */

.outgoing-message {
  padding-right: 0.75rem;
  justify-content: flex-end;
  transform-origin: 0% 50%;
  animation: showChatBubble 0.05s linear 0.25s forwards;
}

.outgoing-message .message-bubble {
  background: linear-gradient(
    180deg,
    rgba(255, 161, 8, 0.9) 0%,
    rgba(254, 241, 2, 0.9) 100%
  );
  color: var(--text-primary-dark);
}

.outgoing-message .message-bubble::after {
  border-left-color: var(--blue);
}

/* CHATBOX - MESSAGE BUBBLE */

.message-bubble {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  padding: 0.5rem 1rem;
  border-radius: var(--border-radius);
  color: var(--text-primary-dark);
  box-shadow: 0px 24px 55px rgba(96, 216, 0, 0.15);
  position: relative;
  max-width: 80%;
  width: fit-content;
  word-break: break-word;
}

/* CHATBOX - LOADING */

#spinner {
  display: inline-block;
  padding: 1rem;
  background: linear-gradient(
    180deg,
    rgba(255, 255, 255, 0.7) 0%,
    rgba(255, 255, 255, 1) 100%
  );
  margin-top: 1rem;
  margin-left: calc(var(--profile-img-size) + 0.5rem + 1rem);
}

.loader {
  align-items: center;
  display: flex;
}

.loader .dot {
  animation: mercuryTypingAnimation 1.8s infinite ease-in-out;
  background-color: #6cad96; //rgba(20,105,69,.7);
  border-radius: 50%;
  height: 7px;
  margin-right: 4px;
  vertical-align: middle;
  width: 7px;
  display: inline-block;
}

.loader .dot:nth-child(1) {
  animation-delay: 200ms;
}

.loader .dot:nth-child(2) {
  animation-delay: 300ms;
}

.loader .dot:nth-child(3) {
  animation-delay: 400ms;
}

.loader .dot:last-child {
  margin-right: 0;
}

@keyframes mercuryTypingAnimation {
  0% {
    transform: translateY(0);
    background-color: #6cad96;
  }
  28% {
    transform: translateY(-7px);
    background-color: #9ecab9;
  }
  44% {
    transform: translateY(0px);
    background-color: #b5d9cb;
  }
}

/* CHATBOX - CHOICES */

.choices {
  margin-left: calc(var(--profile-img-size) + 0.5rem);
  margin-bottom: 1rem;
}

/* CHAT INPUT */
.chat-input-container {
  display: flex;
  height: var(--footer-height);
  align-items: center;
  justify-content: center;
  padding: var(--p-sm);
  margin-top: var(--p-sm);
}

.chat-input-container form {
  display: flex;
  width: 100%;
  height: 3.5rem;
  padding: var(--p-sm);
  border: none;
}

.chat-input-container form input[type='text'] {
  flex: 1;
  align-items: center;
  margin-right: 1rem;
  padding-left: 1.25rem;
  border-radius: var(--border-radius);
  border: 1px solid var(--text-secondary);
  background-color: var(--light-gray);
  color: var(--text-secondary);
}

